# get-on-your-apprenticeship

./: .gitignore  docker-compose.yml
api_fastapi/: Dockerfile  mkdocs.yml  pyproject.toml
api_fastapi/api/: dummy.py  main.py  real.py  settings.py  users.py
api_fastapi/api/templates/: error.html  index.html  layout.html
api_fastapi/docs/: index.md
api_fastapi/scripts/: format.sh  serve.sh
front/: Dockerfile  package-lock.json  package.json
front/src/: App.js
front_vuejs/: vue.html
