[tool.poetry]
name = "api_fastapi"
version = "0.1.0"
description = "get-on-your-apprenticeship"
authors = ["Marc Pastor-Abad <marc.pastorabad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mkdocs = "^1.2.2"
mkdocstrings = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
